compiler/tests/fail/stack_allocation/x86-64/merge_same.jazz
export fn foo () -> reg u64 {
  reg u64 r;
  stack u64[4] s;
  reg ptr u64[4] rt;

  s[2] = 0;
  rt = s;
  s[0:2] = rt[2:2];
  r = s[0];
  return r;
}
